--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,14 @@ compiler:
 
 # 2.6 and "nightly" do not work at the moment, so they are commented out.
 python:
-  # - "2.6"
+  - "2.6"
   - "2.7"
-  #- "3.2"
-  #- "3.3"
-  #- "3.4"
+  - "3.2"
+  - "3.3"
+  - "3.4"
   - "3.5"
-  #- "3.5-dev" # 3.5 development branch
-  # - "nightly" # currently points to 3.6-dev
+  - "3.5-dev" # 3.5 development branch
+  - "nightly" # currently points to 3.6-dev
 
 before_install:
   - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
