--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: python
 compiler:
   - gcc
 
+sudo: true
+
 # 2.6 does not work at the moment, so it is commented out.
 python:
   #- "2.6"
@@ -14,11 +16,22 @@ python:
   - "3.5-dev" # 3.5 development branch
   - "nightly" # currently points to 3.6-dev
 
+addons:
+  apt:
+    sources:
+      - kalakris-cmake
+      - ubuntu-toolchain-r-test
+    packages:
+      - gfortran-5
+      - binutils
+      - cmake
+      - graphviz
+
 before_install:
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -qq
-  - sudo apt-get install gfortran-5
-  - sudo apt-get install graphviz
+  #- sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  #- sudo apt-get update -qq
+  #- sudo apt-get install gfortran-5
+  #- sudo apt-get install graphviz
   - sudo ln -fs /usr/bin/gfortran-5 /usr/bin/gfortran && gfortran --version
   - export PATH=".:$PATH"
   - gcc -v
