--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,12 @@ addons:
 #  - gfortran -v
 
 # command to install dependencies
-install: "pip install -r requirements.travis.txt"
-
-before_script:
-    - ln -s /usr/bin/gfortran-5 /opt/gfortran
-    - gfortran --version
+install:
+    - export PATH="$HOME/.local/bin:$PATH"
+    - export FC=/usr/bin/gfortran-5
+    - ln -fs /usr/bin/gfortran-5 "$HOME/.local/bin/gfortran" && gfortran --version
+    - ls -l /usr/bin/gfortran-5
+    - pip install -r requirements.travis.txt
 
 # command to run tests
 script: 
