--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,10 @@ addons:
 
 # command to install dependencies
 install:
+    - |
+      if [[ ! -d "$HOME/.local/bin" ]]; then
+        mkdir "$HOME/.local/bin"
+      fi
     - export PATH="$HOME/.local/bin:$PATH"
     - export FC=/usr/bin/gfortran-5
     - ln -fs /usr/bin/gfortran-5 "$HOME/.local/bin/gfortran" && gfortran --version
