--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,13 @@ python:
   - "3.5-dev" # 3.5 development branch
   - "nightly" # currently points to 3.6-dev
 
+cache:
+  apt: true
+  pip: true
+  directories:
+    - $HOME/.cache/pip
+    - $HOME/.local
+
 addons:
   apt:
     sources:
@@ -26,6 +33,7 @@ addons:
       - binutils
       - cmake
       - graphviz
+      - python-pip
 
 #before_install:
 #  #- sudo ln -fs /usr/bin/gfortran-5 /usr/bin/gfortran && gfortran --version
