--- a/.travis.yml
+++ b/.travis.yml
@@ -56,5 +56,5 @@ install:
 # command to run tests
 script: 
     - export PYTHONPATH=$PYTHONPATH:.
-    - nosetests -v ./autotest/t003_test.py
-    #- nosetests -v -w ./autotest
+    #- nosetests -v ./autotest/t003_test.py
+    - nosetests -v -w ./autotest
