--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,22 @@ compiler:
 
 sudo: false #true
 
-# 2.6 does not work at the moment, so it is commented out.
-python:
-  #- "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.5-dev" # 3.5 development branch
-  - "nightly" # currently points to 3.6-dev
+matrix:
+  include:
+    - python: 2.6
+    - python: 2.7
+    - python: 3.2
+    - python: 3.3
+    - python: 3.4
+    - python: 3.5.1
+    - python: "3.5-dev"
+    - python: "nightly"
+
+  allow_failures:
+    - python: 2.6
+    - python: 3.2
+    - python: "nightly"
+
 
 cache:
   apt: true
@@ -57,5 +63,4 @@ install:
 # command to run tests
 script: 
     - export PYTHONPATH=$PYTHONPATH:.
-    #- nosetests -v ./autotest/t003_test.py
     - nosetests -v -w ./autotest
