--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,16 @@ sudo: false #true
 
 matrix:
   include:
-    - python: 2.6
     - python: 2.7
-    - python: 3.2
     - python: 3.3
     - python: 3.4
-    - python: 3.5.1
-    - python: "3.5-dev"
+    - python: 3.5
+    - python: 3.6
+    - python: "3.6-dev"
     - python: "nightly"
 
   allow_failures:
-    - python: 2.6
-    - python: 3.2
+    - python: "3.6-dev"
     - python: "nightly"
 
 
@@ -57,7 +55,10 @@ install:
     - export FC=/usr/bin/gfortran-5
     - ln -fs /usr/bin/gfortran-5 "$HOME/.local/bin/gfortran" && gfortran --version
     - ls -l /usr/bin/gfortran-5
-    - pip install -r requirements.travis.txt
+    - if [[ $TRAVIS_PYTHON_VERSION == 3.3 ]];
+      then pip install -r requirements33.travis.txt;
+      else pip install -r requirements.travis.txt;
+      fi
     - pip install https://github.com/modflowpy/flopy/zipball/develop
 
 # command to run tests
