--- a/.travis.yml
+++ b/.travis.yml
@@ -1,46 +1,46 @@
 language: python
-compiler: gcc
+os: linux
 dist: xenial
-
+compiler: gcc
+services:
+- xvfb
 matrix:
   include:
-    - python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: 3.8
-    - python: "3.8-dev"
+  - env: RUN_TYPE=test
+    python: 3.5
+  - env: RUN_TYPE=test
+    python: 3.6
+  - env: RUN_TYPE=test
+    python: 3.7
+  - env: RUN_TYPE=flake
+    python: 3.8
+  - env: RUN_TYPE=test
+    python: "3.8-dev"
 
   allow_failures:
     - python: "3.8-dev"
 
 cache:
-  apt: true
   pip: true
   directories:
-    - $HOME/.cache/pip
-    - $HOME/.local
-
+  - "$HOME/.cache/pip"
+  - "$HOME/.local"
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+    - ubuntu-toolchain-r-test
     packages:
-      - gfortran
-      - binutils
-      - graphviz
-      - python-pip
-
-# command to install dependencies
-install:
-    - export FC=/usr/bin/gfortran
-    - pip install -r requirements.travis.txt
-    - pip install https://github.com/modflowpy/flopy/zipball/develop
-    - pip install nose-timer
-    - pip install coveralls
-
-# command to run tests
-script: 
-    - export PYTHONPATH=$PYTHONPATH:.
-    - nosetests -v --with-id --with-timer -w ./autotest --with-coverage --cover-package=pymake
-after_success:
-    - coveralls
+    - gfortran-8
+    - g++-8
+    - libhdf5-serial-dev
+    - netcdf-bin
+    - libnetcdf-dev
+    - gdal-bin
+    - libgdal-dev
+env:
+  global:
+  - PYTHONPATH=$PYTHONPATH:.
+install: ./travis/install.sh
+before_script: ./travis/before_script.sh
+script: ./travis/script.sh
+after_success: coveralls
