--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,10 @@
 *            text=auto
 
 ###############################################################################
+# Set the merge driver for windows files
+#
+*.bat        text eol=crlf
+
 # Denote all files that are truly binary and should not be modified.
 *.png binary
 *.jpg binary
