--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,9 +39,10 @@ jobs:
     - name: Install python packages
       run: |
         pip install --upgrade pip
+        pip install numpy
+        pip install GDAL
         pip install -r ./requirements.travis.txt
-        pip install --no-binary rasterio rasterio
-        pip install --upgrade numpy
+        pip install --no-binary rasterio
         pip install shapely[vectorize]
         pip install https://github.com/modflowpy/flopy/zipball/develop
         pip install requests nose-timer
