--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,13 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         exclude:
           - os: macos-latest
-            python-version: [3.6, 3.7]
+            python-version: 3.6
+          - os: macos-latest
+            python-version: 3.7
           - os: windows-latest
-            python-version: [3.6, 3.7]
+            python-version: 3.6
+          - os: windows-latest
+            python-version: 3.7
 
     steps:
     - uses: actions/checkout@v1
