--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
       matrix:
         python-version: [3.6, 3.7, 3.8]
         os: [ubuntu-latest, macos-latest, windows-latest]
+        experimental: [false]
+        include:
+          - os: macos-latest
+            python-version: 3.8
+            experimental: true
         exclude:
           - os: macos-latest
             python-version: 3.6
