--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,13 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, windows-latest]
+        os: ubuntu-latest
+        experimental: [false]
         include:
           - os: macos-latest
+            python-version: 3.8
+            experimental: true
+          - os: windows-latest
             python-version: 3.8
             experimental: true
 
@@ -22,28 +26,29 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Graphviz
       uses: ts-graphviz/setup-graphviz@v1
-    - uses: actions/checkout@v2
-    - name: Install Protoc for GitHub API
-      uses: arduino/setup-protoc@master
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+        github-token: ${{secrets.GITHUB_TOKEN}}
+
     - name: Install and print system dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
         sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
         gfortran --version
+
     - name: Install and print system dependencies (macOS)
       if: runner.os == 'macOS'
       run: |
         gfortran --version
+
     - name: Install and print system dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
         gfortran --version
+
     - name: Install python packages
       run: |
         pip install requests nose-timer
@@ -51,6 +56,7 @@ jobs:
         pip install numpy matplotlib
         pip install https://github.com/modflowpy/flopy/zipball/develop
         pip install .
+
     - name: Test with nosetests
       run: |
         nosetests -v --with-id --with-timer -w ./autotest
@@ -66,8 +72,9 @@ jobs:
         python-version: 3.8
     - name: Install packages
       run: |
-        pip install flake8
-        pip install black
+        pip install flake8 pylint pylint-exit black
+    - name: Run pylint
+      run: pylint --jobs=2 --errors-only ./pymake
     - name: Run flake8
       run: flake8
     - name: Run black
