--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: ubuntu-latest
+        os: [ubuntu-latest]
         experimental: [false]
         include:
           - os: macos-latest
@@ -26,29 +26,24 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Graphviz
       uses: ts-graphviz/setup-graphviz@v1
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
         github-token: ${{secrets.GITHUB_TOKEN}}
-
     - name: Install and print system dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
         sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
         gfortran --version
-
     - name: Install and print system dependencies (macOS)
       if: runner.os == 'macOS'
       run: |
         gfortran --version
-
     - name: Install and print system dependencies (Windows)
       if: runner.os == 'Windows'
       run: |
         gfortran --version
-
     - name: Install python packages
       run: |
         pip install requests nose-timer
@@ -56,7 +51,6 @@ jobs:
         pip install numpy matplotlib
         pip install https://github.com/modflowpy/flopy/zipball/develop
         pip install .
-
     - name: Test with nosetests
       run: |
         nosetests -v --with-id --with-timer -w ./autotest
