--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,6 @@ jobs:
     - name: Run black
       run: black --check --line-length 79 ./pymake
     - name: Run flake8
-      run: flake8 --exit-zero
+      run: flake8 --count --show-source ./pymake
     - name: Run pylint
       run: pylint --jobs=0 --errors-only ./pymake
