--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,19 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Graphviz
       uses: ts-graphviz/setup-graphviz@v1
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install python packages
+      run: |
+        pip install requests nose-timer
+        pip install pydotplus appdirs
+        pip install numpy matplotlib
+        pip install https://github.com/modflowpy/flopy/zipball/develop
+        pip install .
+
     - name: Install and print system dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
@@ -38,18 +47,19 @@ jobs:
         gfortran --version
     - name: Install and print system dependencies (Windows)
       if: runner.os == 'Windows'
+      uses: numworks/setup-msys2@v1
       run: |
-        gfortran --version
-    - name: Install python packages
-      run: |
-        pip install requests nose-timer
-        pip install pydotplus appdirs
-        pip install numpy matplotlib
-        pip install https://github.com/modflowpy/flopy/zipball/develop
-        pip install .
-    - name: Run nosetests
+        msys2do gfortran --version
+    - name: Run nosetests on linux and macOS
+      if: runner.os == 'Linux' || runner.os == 'macOS'
       run: |
         nosetests -v --with-id --with-timer -w ./autotest
+      env:
+        repo-token: ${{secrets.GITHUB_TOKEN}}
+    - name: Run nosetests on Windows
+      if: runner.os == 'Windows'
+      run: |
+        msys2do nosetests -v --with-id --with-timer -w ./autotest
       env:
         repo-token: ${{secrets.GITHUB_TOKEN}}
 
