--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  test:
+  PymakeLinuxMacOS:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -16,8 +16,47 @@ jobs:
         include:
           - os: macos-latest
             python-version: 3.8
-          - os: windows-latest
-            python-version: 3.8
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Setup Graphviz
+      uses: ts-graphviz/setup-graphviz@v1
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install python packages
+      run: |
+        pip install requests nose-timer
+        pip install pydotplus appdirs
+        pip install numpy matplotlib
+        pip install https://github.com/modflowpy/flopy/zipball/develop
+        pip install .
+
+    - name: Install and print gfortran version (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
+        gfortran --version
+    - name: Print gfortran version (macOS)
+      if: runner.os == 'macOS'
+      run: |
+        gfortran --version
+    - name: Run nosetests
+      run: |
+        nosetests -v --with-id --with-timer -w ./autotest
+      env:
+        repo-token: ${{secrets.GITHUB_TOKEN}}
+
+
+  PymakeWindows:
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -36,26 +75,14 @@ jobs:
         pip install https://github.com/modflowpy/flopy/zipball/develop
         pip install .
 
-    - name: Install and print system dependencies (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
-        gfortran --version
-    - name: Install and print system dependencies (macOS)
-      if: runner.os == 'macOS'
-      run: |
-        gfortran --version
-    - name: Install and print system dependencies (Windows)
-      if: runner.os == 'Windows'
+    - name: Setup Msys2 environment
       uses: numworks/setup-msys2@v1
+
+    - name: Print gfortran version (Windows)
+      if: runner.os == 'Windows'
       run: |
         msys2do gfortran --version
-    - name: Run nosetests on linux and macOS
-      if: runner.os == 'Linux' || runner.os == 'macOS'
-      run: |
-        nosetests -v --with-id --with-timer -w ./autotest
-      env:
-        repo-token: ${{secrets.GITHUB_TOKEN}}
+
     - name: Run nosetests on Windows
       if: runner.os == 'Windows'
       run: |
@@ -64,7 +91,7 @@ jobs:
         repo-token: ${{secrets.GITHUB_TOKEN}}
 
 
-  lint:
+  Pymakelint:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
