--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  test:
+  pymakeCI:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -23,23 +23,12 @@ jobs:
     - uses: actions/checkout@v1
     - name: Setup Graphviz
       uses: ts-graphviz/setup-graphviz@v1
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install and print system dependencies (Linux)
-      if: runner.os == 'Linux'
-      run: |
-        sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
-        gfortran --version
-    - name: Install and print system dependencies (macOS)
-      if: runner.os == 'macOS'
-      run: |
-        gfortran --version
-    - name: Install and print system dependencies (Windows)
-      if: runner.os == 'Windows'
-      run: |
-        gfortran --version
+
     - name: Install python packages
       run: |
         pip install requests nose-timer
@@ -47,6 +36,16 @@ jobs:
         pip install numpy matplotlib
         pip install https://github.com/modflowpy/flopy/zipball/develop
         pip install .
+
+    - name: Install gfortran (Linux)
+      if: runner.os == 'Linux'
+      run: |
+        sudo ln -fs /usr/bin/gfortran-9 /usr/local/bin/gfortran
+
+    - name: Print gfortran version
+      run: |
+        gfortran --version
+
     - name: Run nosetests
       run: |
         nosetests -v --with-id --with-timer -w ./autotest
@@ -54,7 +53,7 @@ jobs:
         repo-token: ${{secrets.GITHUB_TOKEN}}
 
 
-  lint:
+  pymake_lint:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
