feat(Pymake): add option to build from inplace source files
Additional cleanup of unused methods and consistent methods to strip
paths and extensions from targets and compilers.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,35 @@ on:
   pull_request:
 
 jobs:
+
+  pymake_lint:
+    name: pymake linting
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+    - name: Setup Graphviz
+      uses: ts-graphviz/setup-graphviz@v1
+    - name: Install packages
+      run: |
+        pip install requests pydotplus appdirs numpy matplotlib
+        pip install https://github.com/modflowpy/flopy/zipball/develop
+        pip install pylint flake8 black
+    - name: Run black
+      run: black --check --line-length 79 ./pymake
+    - name: Run flake8
+      run: flake8 --count --show-source ./pymake
+    - name: Run pylint
+      run: pylint --jobs=0 --errors-only ./pymake
+
   pymakeCI:
+    name: Run pymake CI on different python versions and different OSs
+    needs: pymake_lint
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -66,28 +94,3 @@ jobs:
         nosetests -v --with-id --with-timer -w ./autotest
       env:
         repo-token: ${{secrets.GITHUB_TOKEN}}
-
-
-  pymake_lint:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.8
-    - name: Setup Graphviz
-      uses: ts-graphviz/setup-graphviz@v1
-    - name: Install packages
-      run: |
-        pip install requests pydotplus appdirs numpy matplotlib
-        pip install https://github.com/modflowpy/flopy/zipball/develop
-        pip install pylint flake8 black
-    - name: Run black
-      run: black --check --line-length 79 ./pymake
-    - name: Run flake8
-      run: flake8 --count --show-source ./pymake
-    - name: Run pylint
-      run: pylint --jobs=0 --errors-only ./pymake
