feat(Pymake): add option to build from inplace source files
Additional cleanup of unused methods and consistent methods to strip
paths and extensions from targets and compilers. Modify
download_and_unzip to make it more robust for connection errors.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,8 @@ jobs:
         g++ --version
 
     - name: Run nosetests
+      shell: bash
       env:
         repo-token: ${{ secrets.ACTIONS_PYMAKE }}
       run: |
-        nosetests -v --with-id --with-timer -w ./autotest
+        nosetests -v --with-id --with-timer -w ./autotest "$repo-token"
