--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,7 +102,7 @@ jobs:
       shell: bash
       run: |
         coverage run -m nose -v --with-id --with-timer \
-        --with-coverage --cover-package=flopy --cover-xml \
+        --with-coverage --cover-package=pymake --cover-xml \
         --cover-xml-file=../coverage.xml -w ./autotest
 
     - name: Upload coverage to Codecov
