--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,7 @@ jobs:
 
     - name: Install python packages
       run: |
+        python -m pip install --upgrade pip 
         pip install requests pytest pytest-timer pytest-cov coverage
         pip install pydotplus appdirs
         pip install numpy matplotlib
