--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
 
     - name: Install python packages
       run: |
-        python -m pip install --upgrade pip 
+        python -m pip install --upgrade pip
         pip install requests pytest pytest-timer pytest-cov coverage
         pip install pydotplus appdirs
         pip install numpy matplotlib
@@ -102,9 +102,7 @@ jobs:
     - name: Run pytest
       shell: bash
       run: |
-        pytest -v --cov=pymake --cov-report=xml ./autotest/
+        pytest -v --cov=pymake --cov-report=xml autotest/
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.12
-      with:
-        file: ./coverage.xml
