--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,11 +69,16 @@ jobs:
     - name: Install python packages
       run: |
         python -m pip install --upgrade pip
-        pip install requests pytest pytest-timer pytest-cov coverage
+        pip install requests pytest pytest-cov coverage
         pip install pydotplus appdirs
         pip install numpy matplotlib
         pip install https://github.com/modflowpy/flopy/zipball/develop
         pip install .
+
+    - name: Install pytest timer on Linux
+      if: runner.os == 'Linux'
+      run: |
+        pip install pytest-timer[termcolor]
 
     - name: Install gfortran on Linux
       if: runner.os == 'Linux'
