ci(pytest): modify autotests to run with pytest
Also remove Travis CI files.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,5 +109,12 @@ jobs:
       run: |
         pytest -v --cov=pymake --cov-report=xml autotest/
 
+    - name: Print coverage report before upload
+      shell: bash
+      run: |
+        coverage report
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.12
+      with:
+        file: ./coverage.xml
