--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@
 global-exclude .DS_Store *.pyc *.pyo *.pyd *.swp *.bak *~ .* *.sh *.yml
 prune */__pycache__
 # include specific files
-include pymake/usgsprograms.txt
+include pymake/utils/usgsprograms.txt
 recursive-include example *.py *.bat
