--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,7 @@ jobs:
 
   pymake_rtd:
     name: pymake rtd
-    needs: pymake_CI
+    needs: pymakeCI
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
