update(usgsprograms): update mf6 version to 6.2.0

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+
+    if: github.repository_owner == 'modflowpy'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
