--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,7 +132,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Trigger RTDs build
-        if: github.repository_owner == 'modflowpy' && github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: dfm/rtds-action@v1.0.0
         with:
           webhook_url: ${{ secrets.RTDS_WEBHOOK_URL }}
