--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Graphviz
+        if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python ${{ matrix.python-version }}
