refactor(fflags): update fflags for mac and linux
Update mf6 autotest (t008) to use mf6examples repo. Add test to setup
mf6examples from MODFLOW 6 examples repo. Update t002 autotest (seawat)
to only generate dependency graphs on linux.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,6 +107,13 @@ jobs:
           gcc --version
           g++ --version
 
+      - name: Download examples for pytest runs
+        shell: bash
+        run: |
+          cd autotest
+          python ci_setup.py
+          cd ..
+
       - name: Run pytest
         shell: bash
         run: |
