--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Graphviz
+        if: runner.os == 'Linux'
         uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python ${{ matrix.python-version }}
@@ -106,6 +107,13 @@ jobs:
           gcc --version
           g++ --version
 
+      - name: Download examples for pytest runs
+        shell: bash
+        run: |
+          cd autotest
+          python ci_setup.py
+          cd ..
+
       - name: Run pytest
         shell: bash
         run: |
@@ -132,7 +140,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Trigger RTDs build
-        if: github.repository_owner == 'modflowpy' && github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: dfm/rtds-action@v1.0.0
         with:
           webhook_url: ${{ secrets.RTDS_WEBHOOK_URL }}
