--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,11 +72,11 @@ jobs:
       - name: Install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install requests pytest pytest-cov coverage
-          pip install pydotplus appdirs
-          pip install numpy matplotlib
-          pip install https://github.com/modflowpy/flopy/zipball/develop
           pip install .
+          pip install pytest pytest-cov coverage
+          pip install pydotplus appdirs
+          pip install matplotlib
+          pip install https://github.com/modflowpy/flopy/zipball/develop
 
       - name: Install pytest timer on Linux
         if: runner.os == 'Linux'
