--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Python 3.8
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
@@ -65,18 +65,18 @@ jobs:
         uses: ts-graphviz/setup-graphviz@v1
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install requests pytest pytest-cov coverage
-          pip install pydotplus appdirs
-          pip install numpy matplotlib
-          pip install https://github.com/modflowpy/flopy/zipball/develop
           pip install .
+          pip install pytest pytest-cov coverage
+          pip install pydotplus appdirs
+          pip install matplotlib
+          pip install https://github.com/modflowpy/flopy/zipball/develop
 
       - name: Install pytest timer on Linux
         if: runner.os == 'Linux'
